--- a/frontend/Login-view.css
+++ b/frontend/Login-view.css
@@ -149,7 +149,7 @@ body {
 }
 
 .hero-section {
-    background-image: url('E:/coding/2-2 project practice/NoteBox-main/frontend/paper.jpg');
+    background-image: url("D:/0. Acadmic stuff/CSE '21/Sem-4/NOTEBOX2.0/frontend/paper.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
